title page change

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         ></script>
 
         <link rel="stylesheet" href="./css/style.css" />
-        <title>SWAPI</title>
+        <title>SWAPI - Samuraj Challenge</title>
     </head>
     <body>
         <h1>SWAPI</h1>
